--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="recipes"></div>
+    <div class="recipes" id ="recipes"></div>
 
     <script src="./app.js"></script>
 </body>
